[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EarlyStopping"
version = "0.0.2"
authors = [
  { name="Eric Ziebell, Bernhard Stankewitz, Laura Hucker, Ratmir Miftachov", email="author@example.com" },
]
description = "Early Stopping for Statistical Learning Procedures in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
